[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
eppo = { version = "4.0.1", path = "../rust-sdk" }
eppo_core = { version = "4.1.0", path = "../eppo_core" }
fastly = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
