[package]
name = "eppo_core"
version = "5.0.0"
edition = "2021"
description = "Eppo SDK core library"
repository = "https://github.com/Eppo-exp/rust-sdk"
license = "MIT"
keywords = ["eppo", "feature-flags"]
categories = ["config"]
rust-version = "1.75.0"

[features]
# Add implementation of `FromPyObject`/`ToPyObject` for some types.
pyo3 = ["dep:pyo3", "dep:serde-pyobject"]
# Vendor any external libraries that we need (OpenSSL on Linux), so we
# don’t depend on shared libraries.
#
# See: https://github.com/PyO3/maturin-action/discussions/78
vendored = ["reqwest/native-tls-vendored"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["from", "into"] }
faststr = { version = "0.2.23", features = ["serde"] }
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive", "rc"] }
serde-bool = "0.1.3"
serde_json = "1.0.116"
serde_with = { version = "3.11.0", default-features = false, features = ["base64", "hex", "macros"] }
thiserror = "2.0.3"
tokio = { version = "1.34.0", features = ["rt", "time"] }
url = "2.5.0"

# pyo3 dependencies
pyo3 = { version = "0.22.0", optional = true, default-features = false }
serde-pyobject = { version = "0.4.0", optional = true}

# vendored dependencies
[target.'cfg(all(target_os = "linux", target_arch = "s390x"))'.dependencies]
# OpenSSL 3.3+ includes a patch[1] for s390x architecture that uses a
# specialized instruction (cijne), which is not recognized by GCC in
# ghcr.io/rust-cross/manylinux2014-cross:s390x, and thus fails to
# compile in CI.
#
# Pin "openssl-src" to 300.2.x, which will install openssl-3.2.x,
# which didn't use cijne.
#
# [1]: https://github.com/openssl/openssl/pull/22221
openssl-src = { version = "~300.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11.3"

[[bench]]
name = "evaluation_details"
harness = false
