[package]
name = "fastly-edge-assignments"
version = "0.1.0"
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[dependencies]
base64-url = "3.0.0"
chrono = "0.4.19"
eppo_core = { version = "=4.1.1", path = "../eppo_core" }
fastly = "0.11.0"
serde_json = "1.0.132"
serde = "1.0.192"
sha2 = "0.10.0"
