[package]
name = "eppo_py"
version = "4.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
eppo_core = { version = "4.1.1", path = "../eppo_core", features = ["pyo3", "vendored"] }
log = "0.4.22"
pyo3 = "0.23.2"
pyo3-log = "0.12"
serde-pyobject = "0.4.0"
serde_json = "1.0.125"
