[package]
name = "eppo_py"
version = "4.1.3"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
eppo_core = { version = "=5.0.0", path = "../eppo_core", features = ["pyo3", "vendored"] }
log = "0.4.22"
pyo3 = { version = "0.22.0" }
pyo3-log = "0.11.0"
serde-pyobject = "0.4.0"
serde_json = "1.0.125"
