[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "eppo-server-sdk"
description = "Eppo SDK for Python"
readme = "README.md"
authors = [{ name = "Eppo", email = "eppo-team@geteppo.com" }]
license = { file = "LICENSE" }
# python-3.13 requires pyo3-23.2. However, serde-pyobject is not
# currently compatible with pyo3-23.
#
# See https://github.com/Jij-Inc/serde-pyobject/pull/13.
requires-python = ">=3.8,<3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
[project.urls]
"Bug Tracker" = "https://github.com/Eppo-exp/rust-sdk/issues"

[project.optional-dependencies]
test = [
  "pytest",
  "cachetools",
  "types-cachetools"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "eppo_client._eppo_client"
