[package]
name = "eppo_client"
# TODO: this version and lib/eppo_client/version.rb should be in sync
version = "3.2.6"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.71.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
eppo_core = { version = "4.1.0", features = ["vendored"] }
log = { version = "0.4.21", features = ["kv_serde"] }
magnus = { version = "0.6.4" }
serde = { version = "1.0.203", features = ["derive"] }
serde_magnus = "0.8.1"
rb-sys = "0.9.102"
serde_json = "1.0.128"
